xs screen needs some spacing fixed

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -1,5 +1,6 @@
 
 .logo {
+    border: none;
     height: 105px;
     width: 105px;
 }
@@ -73,4 +74,20 @@ a:hover {
     border-radius: 52px;
     color: white;
     font-family: 'Anton', sans-serif;
+}
+
+img {
+    border: #E6E6E6 5px solid;
+    border-radius: 10px;
+
+}
+
+.circle-icons {
+    font-size: 12px;
+    height: 18px;
+    width: 18px;
+    border-radius: 9px;
+    color: black;
+    font-family: 'Anton', sans-serif;
+    margin-right: 5px;
 }
